# ur5Robotics

./: .gitignore  .launchWorld.sh.swp  README.md  launchWorld.sh  report.md
locosim/robot_control/move_commands/: CMakeLists.txt  Doxyfile  package.xml
locosim/robot_control/move_commands/include/: algebra.h  block.h  constants.h  joint_state_publisher.h  kinematic.h
locosim/robot_control/move_commands/src/: assignment_123.cpp  block.cpp  first_move.cpp  joint_state_publisher.cpp
locosim/robot_control/vision/: CMakeLists.txt  dd.txt  package.xml
locosim/robot_control/vision/scripts/: SpawnBlocks.py  SpawnBlocks_temp.py  Spawn_block_template.py  bunny_part1.xyz  change_color.py  client.py  gb_pc.xyz  icp_template.py  server.py  stl_pc.xyz  take_photo.py  take_photo_temp.py  take_photo_temp_mio.py  template_matching_test.py
locosim/robot_control/vision/scripts/template/: crop.py  move_template.py
locosim/robot_control/vision/scripts/template/0/: 0_0.25_0.6375_0_3.141592653589793_0.39269908169872414j.pg
locosim/robot_control/vision/scripts/template/pcds/0.5_0.2584/: 0_0.5_0.2584_0_0_0.0.pcd  0_0.5_0.2584_0_0_0.3927.pcd  0_0.5_0.2584_0_0_0.7854.pcd  0_0.5_0.2584_0_0_1.1781.pcd  0_0.5_0.2584_0_3.1416_0.0.pcd  0_0.5_0.2584_0_3.1416_0.3927.pcd  0_0.5_0.2584_0_3.1416_0.7854.pcd  0_0.5_0.2584_0_3.1416_1.1781.pcd  0_0.5_0.2584_1.5708_0_0.0.pcd  0_0.5_0.2584_1.5708_0_0.3927.pcd  0_0.5_0.2584_1.5708_0_0.7854.pcd  0_0.5_0.2584_1.5708_0_1.1781.pcd  0_0.5_0.2584_1.5708_0_1.5708.pcd  0_0.5_0.2584_1.5708_0_1.9635.pcd  0_0.5_0.2584_1.5708_0_2.3562.pcd  0_0.5_0.2584_1.5708_0_2.7489.pcd  0_0.5_0.2584_1.5708_0_3.1416.pcd  0_0.5_0.2584_1.5708_0_3.5343.pcd  0_0.5_0.2584_1.5708_0_3.927.pcd  0_0.5_0.2584_1.5708_0_4.3197.pcd  0_0.5_0.2584_1.5708_0_4.7124.pcd  0_0.5_0.2584_1.5708_0_5.1051.pcd  0_0.5_0.2584_1.5708_0_5.4978.pcd  0_0.5_0.2584_1.5708_0_5.8905.pcd  10_0.5_0.2584_0_0_0.0.pcd  10_0.5_0.2584_0_0_0.3927.pcd  10_0.5_0.2584_0_0_0.7854.pcd  10_0.5_0.2584_0_0_1.1781.pcd  10_0.5_0.2584_0_0_1.5708.pcd  10_0.5_0.2584_0_0_1.9635.pcd  10_0.5_0.2584_0_0_2.3562.pcd  10_0.5_0.2584_0_0_2.7489.pcd  10_0.5_0.2584_0_0_3.1416.pcd  10_0.5_0.2584_0_0_3.5343.pcd  10_0.5_0.2584_0_0_3.927.pcd  10_0.5_0.2584_0_0_4.3197.pcd  10_0.5_0.2584_0_0_4.7124.pcd  10_0.5_0.2584_0_0_5.1051.pcd  10_0.5_0.2584_0_0_5.4978.pcd  10_0.5_0.2584_0_0_5.8905.pcd  (+520 more)
locosim/robot_control/vision/scripts/template/pcds/0.5_0.475/: 0_0.5_0.475_0_0_0.0.pcd  0_0.5_0.475_0_0_0.3927.pcd  0_0.5_0.475_0_0_0.7854.pcd  0_0.5_0.475_0_0_1.1781.pcd  0_0.5_0.475_0_3.1416_0.0.pcd  0_0.5_0.475_0_3.1416_0.3927.pcd  0_0.5_0.475_0_3.1416_0.7854.pcd  0_0.5_0.475_0_3.1416_1.1781.pcd  0_0.5_0.475_1.5708_0_0.0.pcd  0_0.5_0.475_1.5708_0_0.3927.pcd  (+551 more)
locosim/robot_control/vision/scripts/yolov5/: data.yaml  detect.py  detect_con_costanti.py  res_save.txt
locosim/robot_control/vision/scripts/yolov8/: yolov8_test.py
locosim/robot_control/vision/src/: client.cpp
locosim/robot_control/vision/srv/: vision.srv
locosim/robot_descriptions/gripper_description/: package.xml
locosim/robot_descriptions/gripper_description/gripper_description/urdf/: soft_finger.xacro
locosim/robot_descriptions/gripper_description/urdf/: gripper.macro.xacro  gripper.xacro  soft_finger.xacro  soft_gripper.macro.xacro
locosim/ros_impedance_controller/: CMakeLists.txt  note.txt  package.xml
locosim/ros_impedance_controller/config/: operator.rviz
locosim/ros_impedance_controller/include/ros_impedance_controller/: controller.h
locosim/ros_impedance_controller/launch/: ros_impedance_controller_aliengo_old.launch  ros_impedance_controller_climbingrobot.launch  ros_impedance_controller_climbingrobot2.launch  ros_impedance_controller_climbingrobot_slider.launch  ros_impedance_controller_floating.launch  ros_impedance_controller_jumpleg.launch  ros_impedance_controller_solo_fw.launch  ros_impedance_controller_ur5.launch
locosim/ros_impedance_controller/src/: controller.cpp
locosim/ros_impedance_controller/worlds/: palopoli.world  starbot_tunnel.world  tavolo.world  tavolo_brick.world  tavolo_brick_castle.world  tavolo_obstacles.world
locosim/ros_impedance_controller/worlds/models/X1-Y1-Z2/: X1-Y1-Z2.dae  X1-Y1-Z2_centered.dae  X1-Y1-Z2_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z1/: X1-Y2-Z1_centered.dae  X1-Y2-Z1_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z2/: X1-Y2-Z2_centered.dae  X1-Y2-Z2_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z2-CHAMFER/: X1-Y2-Z2-CHAMFER_centered.dae  chamfer.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z2-TWINFILLET/: X1-Y2-Z2-TWINFILLET_centered.dae  model.sdf  twinfillet.dae
locosim/ros_impedance_controller/worlds/models/X1-Y3-Z2/: X1-Y3-Z2_centered.dae  X1-Y3-Z2_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y3-Z2-FILLET/: X1-Y3-Z2-FILLET_centered.dae  Y3-fillet.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y4-Z1/: X1-Y4-Z1_centered.dae  X1-Y4-Z1_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y4-Z2/: X1-Y4-Z2_centered.dae  X1-Y4-Z2_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X2-Y2-Z2/: X2-Y2-Z2_centered.dae  X2-Y2.dae  X2-Y2_full.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X2-Y2-Z2-FILLET/: X2-Y2-Z2-FILLET_centered.dae  X2-fillet.dae  model.sdf
locosim/ros_impedance_controller/worlds/models/X2-Y2-Z2-FILLET/old/: model.sdf
locosim/ros_impedance_controller/worlds/models/box/: model.sdf
locosim/ros_impedance_controller/worlds/models/dd/: X2-Y2-Z2_centered.dae
locosim/ros_impedance_controller/worlds/models/ground_plane_custom/: model.config  model.sdf
locosim/ros_impedance_controller/worlds/models/tavolo/: model.sdf
locosim/ros_impedance_controller/worlds/models/tavolo_castle/: model.sdf
locosim/ros_impedance_controller/worlds/models/texture/: texture.material
locosim/ros_impedance_controller/worlds/models/tunnel/: model.sdf
locosim/ros_impedance_controller/worlds/models/tunnel/mesh/: gasdotto.stl
(+709 files in other folders)
