<?xml version="1.0"?>
<package format="2">
  <name>ros_impedance_controller</name>
  <version>0.0.0</version>
  <description>The controller package</description>

  <maintainer email="graiola@todo.todo">graiola</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <depend>controller_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/controller_plugin.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
  </export>

</package>
