<?xml version="1.0"?>
<package format="2">
  <name>gripper_description</name>
  <version>1.0.0</version>
  <description>
      URDF description for OnRobot 3finger end effector
  </description>

  <author>Simone Brentan</author>
  <maintainer email="simobrentan@gmail.com">Simone Brentan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>


